<resources>
    <string name="app_name">PowerImpliIntent</string>
    <string name="action_settings">Settings</string>
    <string name="create_a_timer">Create A Timer</string>
    <string name="add_a_calendar_event">Add A Calendar Event</string>
    <string name="capture_a_video">Capture A Video</string>
    <string name="select_a_contact">Select A Contact</string>
    <string name="web_search">Web Search</string>
    <string name="search">Search</string>
</resources>
